# CMLEngine

./: CMakeLists.txt  README.md
core/asset-management/: AssetManager.cpp  AssetManager.h  IAsset.cpp  IAsset.h
core/asset-management/asset-loaders/: IAssetLoader.cpp  IAssetLoader.h  IAssetLoaderBase.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
core/rendering/: Material.cpp  Material.h  Model.cpp  Model.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
core/rendering/buffer-objects/: BufferObject.h  VAO.cpp  VAO.h
core/world/: Scene.cpp  Scene.h
core/world/instances/: Camera.cpp  Instance.cpp  Instance.h  TexturedInstance.cpp  TexturedInstance.h
